<resources>
    <string name="app_name">Scorer</string>
    <string name="contract_hint">e.p: W4SXX-3</string>
    <string name="NS_score">南北得分:</string>
    <string name="string_digits">1234567890=+-NTntSsHhNnTtCcWwEeDdXxAaPp</string>
    <string name="title_NS">NS</string>
    <string name="title_EW">EW</string>
    <string name="title_contract">定约</string>
    <string name="title_declarer">庄家</string>
    <string name="title_result">结果</string>
    <string name="title_Num">No.</string>
    <string name="title_difference">分差</string>
    <string name="title_home">主队</string>
    <string name="title_away">客队</string>
    <string name="menu_item_clear">Clear</string>
    <string name="title_table_info">\t\t牌桌信息</string>
    <string name="title_table_more">\t\t更多</string>
    <string name="title_import">\t\t导入</string>
    <string name="title_receive_send">\t\t接收 / 发送</string>
    <string name="string_import">导入</string>
    <string name="title_open">\t\t打开</string>
    <string name="title_save">\t\t保存</string>
    <string name="title_string_save">保存</string>
    <string name="title_rename">重命名</string>
    <string name="title_confirm">确认</string>
    <string name="title_delete">删除</string>
    <string name="title_replace">替换</string>
    <string name="title_move">移动</string>
    <string name="title_copy">复制</string>
    <string name="title_paste">粘贴</string>
    <string name="title_cancel">取消</string>
    <string name="title_about">\t\t关于</string>
    <string name="title_clearAll">\t\t清空</string>
    <string name="title_setting">\t\t设置</string>
    <string name="title_hands_set">\t\t副数设定</string>
    <string name="title_new_folder">新建文件夹</string>
    <string name="title_W">W</string>
    <string name="title_E">E</string>
    <string name="title_N">N</string>
    <string name="title_S">S</string>
    <string name="title_date">日期</string>
    <string name="title_change">更改</string>
    <string name="title_ok">确定</string>
    <string name="title_edit_table_info">编辑牌桌信息</string>
    <string name="string_open_room">开室</string>
    <string name="string_closed_room">闭室</string>
    <string name="string_versus">VS</string>
    <string name="hint_W_player_name">西家姓名</string>
    <string name="hint_E_player_name">东家姓名</string>
    <string name="hint_N_player_name">北家姓名</string>
    <string name="hint_S_player_name">南家姓名</string>
    <string name="hint_NS_team_name">南北队伍名</string>
    <string name="hint_EW_team_name">东西队伍名</string>
    <string name="hint_total_handsNum">每轮副数</string>
    <string name="string_internal_storage">内部储存</string>
    <string name="string_SDCard">SD卡</string>
    <string name="string_default_path">默认位置</string>
    <string name="string_catalog">目录</string>
    <string name="string_received">已接收的数据</string>
    <string name="string_data_receiving">数据接收中..</string>
    <string name="string_data_corrupted">数据已损坏</string>
    <string name="string_fileStatus_done">%1$s 接收完成</string>
    <string name="string_fileStatus_receiving">%1$s 接收中..%2$d%%</string>
    <string name="string_file_manager">系统文件管理器</string>
    <string name="string_vp_imp">%1$1.2f (%2$d imp)</string>
    <string name="alert_hands_set">即将设定为 %1$d 副牌，%2$s中第%3$d 副牌后存在已保存的结果，删除后将不可恢复，\n是否继续？</string>

</resources>
