<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/title_table_info"
        android:id="@+id/menu_item_table_info"
        android:icon="@drawable/ic_menu_info"
        app:showAsAction="never"
        />
    <item
        android:visible="false"
        android:title="@string/title_setting"
        android:id="@+id/menu_item_setting"
        android:icon="@drawable/ic_menu_setting"
        app:showAsAction="never"
        />
    <item
        android:title="@string/title_hands_set"
        android:id="@+id/menu_item_hands_set"
        android:icon="@drawable/ic_menu_hands_set"
        app:showAsAction="never"
        />
    <item
        android:title="@string/title_import"
        android:id="@+id/menu_item_import"
        android:icon="@drawable/ic_menu_import"
        app:showAsAction="never"
        />
    <item
        android:title="\t\t文件管理器"
        android:id="@+id/menu_item_open"
        android:icon="@drawable/ic_menu_open"
        app:showAsAction="never"
        />
    <item
        android:title="@string/title_save"
        android:id="@+id/menu_item_save"
        android:icon="@drawable/ic_menu_save"
        app:showAsAction="never"
        />
    <item
        android:title="@string/title_clearAll"
        android:id="@+id/menu_item_clearAll"
        android:icon="@drawable/ic_menu_clear_all"
        app:showAsAction="never"/>
    <item
        android:title="@string/title_about"
        android:id="@+id/menu_item_about"
        android:icon="@drawable/ic_menu_about"
        app:showAsAction="never"
        />
</menu>