<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.blacktec.think.scorer.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/contract_hint"
        android:inputType="none"
        android:padding="24dp"
        android:maxLength="90"
        android:digits="@string/string_digits"
        android:singleLine="true"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:text="@string/NS_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:text="测试用"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_test"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/split_separator"
        android:id="@+id/imageView"/>

</LinearLayout>
